# BitCraftPublic

./: .bitcraft-source-sha  .env.example  .eslintrc.cjs  .gitignore  AI-NATIVE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  README.md  SECURITY.md  STORY-1-1-COMPLETION.md  TEST_STORY_1_1.md  package.json  pnpm-lock.yaml  spacetimedb.skill  test-story-1-1-integration.test.ts  test-story-1-1-nfr.sh  test-story-1-1.sh  test-story-1-3-integration.test.ts  vitest.config.ts
.claude/commands/: bmad-gds-create-game-brief.md  bmad-gds-create-gdd.md  bmad-gds-generate-project-context.md  bmad-gds-quick-dev.md  bmad-gds-quick-spec.md  bmad-tea-teach-me-testing.md
.github/workflows/: ci-rust.yml  ci-typescript.yml
BitCraftServer/.github/: pull_request_template.md
_bmad-output/: project-context.md
_bmad-output/auto-bmad-artifacts/: SPIKE-SUMMARY.md  epic-1-end-report.md  epic-1-start-report.md  epic-2-end-report.md  epic-2-retro-2026-03-13.md  epic-2-start-report.md  epic-3-end-report.md  epic-3-retro-2026-03-14.md  epic-3-start-report.md  epic-4-end-report.md  (+45 more)
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
crates/tui/tests/: integration_test.rs
docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
docker/crosstown/crosstown-src/: Cargo.toml
docker/crosstown/crosstown-src/src/: main.rs
docs/: architecture.md  bls-handler-contract.md  crosstown-bls-implementation-spec.md  data-models.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
scripts/: bls-handler-smoke-test.ts
(+246 files in other folders)
