[package]
name = "sigil-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
authors = ["BitCraft Contributors"]
repository = "https://github.com/bitcraftlabs/sigil"
description = "Terminal user interface for Sigil using ratatui"

[dependencies]
ratatui = "0.30"
crossterm = "0.29.0"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
